// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QPagination 快照测试 > 中间页码渲染 1`] = `
"<div class="container container-center container-wrap">
  <!-- 上一页按钮 --><button aria-label="上一页" class="button" title="上一页"><span class="text-one-line hidden-768">上一页</span>
    <div class="mouse-cursor user-select-none container-center show-768"><svg width="18" height="18" viewBox="0 0 24 24"></svg></div>
  </button><!-- 页码列表 --><span role="status" aria-label="第 3 页，共 10 页">3 / 10</span><!-- 下一页按钮 --><button aria-label="下一页" class="button" title="下一页"><span class="text-one-line hidden-768">下一页</span>
    <div class="mouse-cursor user-select-none container-center show-768"><svg width="18" height="18" viewBox="0 0 24 24"></svg></div>
  </button><!-- 跳转到指定页 -->
  <div class="container-center"><input max="10" aria-label="跳转到指定页" class="text-input" min="1" type="number"><button class="button"><span class="text-one-line">跳转</span></button></div>
</div>"
`;

exports[`QPagination 快照测试 > 第一页渲染(上一页禁用) 1`] = `
"<div class="container container-center container-wrap">
  <!-- 上一页按钮 --><button aria-label="上一页" class="mouse-cursor-disable button" disabled="" title="上一页"><span class="text-one-line hidden-768">上一页</span>
    <div class="mouse-cursor user-select-none container-center show-768"><svg width="18" height="18" viewBox="0 0 24 24"></svg></div>
  </button><!-- 页码列表 --><span role="status" aria-label="第 1 页，共 10 页">1 / 10</span><!-- 下一页按钮 --><button aria-label="下一页" class="button" title="下一页"><span class="text-one-line hidden-768">下一页</span>
    <div class="mouse-cursor user-select-none container-center show-768"><svg width="18" height="18" viewBox="0 0 24 24"></svg></div>
  </button><!-- 跳转到指定页 -->
  <div class="container-center"><input max="10" aria-label="跳转到指定页" class="text-input" min="1" type="number"><button class="button"><span class="text-one-line">跳转</span></button></div>
</div>"
`;
